--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-yaml": "^3.4.6",
     "morgan": "~1.6.1",
     "nodemon": "^1.8.1",
+    "redis": "^2.4.2",
     "serve-favicon": "~2.3.0"
   }
 }
